--- a/src/angular/SPACore.PhoneBook/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
+++ b/src/angular/SPACore.PhoneBook/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=localhost; Database=PhoneBookDb; Trusted_Connection=True;"
+        "Default": "Server=localhost; Database=PhoneBookDb_NG; Trusted_Connection=True;"
     },
     "App": {
         "ServerRootAddress": "http://localhost:21021/",
