初始化person页面。

--- a/src/angular/SPACore.PhoneBook/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
+++ b/src/angular/SPACore.PhoneBook/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-    "ConnectionStrings": {
-        "Default": "Server=localhost; Database=PhoneBookDb_NG; Trusted_Connection=True;"
-    },
+  "ConnectionStrings": {
+    "Default": "Data Source=.; Database=PhoneBookDb_NG; User ID=sa; Password=123;"
+  },
     "App": {
         "ServerRootAddress": "http://localhost:21021/",
         "ClientRootAddress": "http://localhost:4200/",
