电话薄功能切换为PostgreSQL数据库

--- a/src/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
+++ b/src/aspnet-core/src/SPACore.PhoneBook.Web.Host/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=.; Database=PhoneBookDb_NG; User ID=sa; Password=123;"
+ 
+    "Default": "User ID=postgres;Password=123;Host=localhost;Port=5432;Database=PhoneBookDb_NG;Pooling=true;"
+
   },
     "App": {
         "ServerRootAddress": "http://localhost:21021/",
