--- a/src/aspnet-core/src/SPACore.PhoneBook.EntityFrameworkCore/SPACore.PhoneBook.EntityFrameworkCore.csproj
+++ b/src/aspnet-core/src/SPACore.PhoneBook.EntityFrameworkCore/SPACore.PhoneBook.EntityFrameworkCore.csproj
@@ -8,9 +8,9 @@
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SPACore.PhoneBook.Core\SPACore.PhoneBook.Core.csproj" />
